@@ -1,3 +1,13 @@
+2010-02-23  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Fix handling of check_wdiff_install when wdiff isn't installed.
+
+        http://bugs.webkit.org/show_bug.cgi?id=35304
+
+        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
+
 2010-02-23  Leandro Pereira  <leandro@profusion.mobi>
 
         Reviewed by NOBODY.
